# hopsan

./: CMakeLists.txt  Common.prf
Compgen/: CompgenNG.nb
HopsanCLI/: CMakeLists.txt  main.cpp
HopsanCore/: CMakeLists.txt  HopsanCore.pro
HopsanCore/include/: Component.h  ComponentSystem.h  ComponentUtilities.h  HopsanCoreGitVersion.h  HopsanCoreMacros.h  HopsanEssentials.h  Node.h  Nodes.h
HopsanCore/include/ComponentUtilities/: HeatFlowCalculator.h  InterpolationTable.h  TurbulentFlowFunction.h
HopsanCore/include/Components/: OMSimulatorComponents.hpp
HopsanCore/include/CoreUtilities/: MultiThreadingUtilities.h
HopsanCore/src/: Component.cpp  ComponentSystem.cpp  HopsanEssentials.cpp  Node.cpp
HopsanCore/src/ComponentUtilities/: TempDirectoryHandle.cpp
HopsanCore/src/CoreUtilities/: GeneratorHandler.cc  MultiThreadingUtilities.cpp
HopsanGUI/: Configuration.cpp  Configuration.h  CoreAccess.cpp  GUIConnector.cpp  GUIConnector.h  GraphicsView.cpp  GraphicsView.h  HopsanGUI.pro  LibraryHandler.cpp  MainWindow.cpp  MainWindow.h  ModelHandler.cpp  ModelHandler.h  OMSimulatorHandler.cpp  OMSimulatorHandler.h  OptimizationHandler.cpp  OptimizationHandler.h  Resources.qrc  common.h  global.h  main.cpp
Ops/: Ops.pro
dependencies/: setupZeroMQ.bat
docs/: annotated.html  annotated_dup.js  building-a-model.html  classLookupTable1D-members.html  classLookupTable1D.html  classLookupTable1D.js  classLookupTable2D-members.html  classLookupTable2D.html  classLookupTable2D.js  classLookupTable3D-members.html  classLookupTable3D.html  classLookupTable3D.js  (+394 more)
(+63 files in other folders)
